[package]
name = "pastebin"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6"
actix-multipart = "0.4"
actix-web = "4"
dotenv = "0.15"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
log = "0.4"
rand = "0.8"
redis = { version = "0.22", features = ["r2d2"] }
r2d2 = "0.8"
sanitize-filename = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["fs"] }